lesson.html nav and unordered list

--- a/1.1/index.html
+++ b/1.1/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
-        <link rel="stylesheet" href="1.1/assets/css/style.css">
+        <link rel="stylesheet" href="Assets/style.css">
     </head>
 
     <body>
@@ -22,12 +22,12 @@
 
         <!-- "what we do" section -->
         <section>
-          <h2>What We Do</h2>
+          <h2 class="nav">What We Do</h2>
         </section>
 
         <!-- "what you do" section -->
         <section>
-          <h2>What You Do</h2>
+          <h2 class="nav">What You Do</h2>
         </section>
 
         <!-- "meet the trainers" section -->
